# rust-playground

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
build_deps/: Cargo.toml
build_deps/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: main.rs
proto/: paas.proto
protos/: fibonacci.proto  math.proto
proxy/: main.rs
runner/: Cargo.toml
runner-extended/: Cargo.toml  build.rs
runner-extended/src/: lib.rs
runner/src/: lib.rs
server/: Cargo.toml  build.rs  main.rs
server/src/: main.rs
src/: generated_operations.rs  lib.rs  main.rs  operations_source.rs
worker/: main.rs
