[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
backoff = { version = "0.4.0", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "server/main.rs"

[[bin]]
name = "proxy"
path = "proxy/main.rs"

[[bin]]
name = "worker"
path = "worker/main.rs"